--- a/index.html
+++ b/index.html
@@ -12,13 +12,33 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="mt-5">Todoo</h1>
-        <input type="text" placeholder="Tambah..." id="input-search">
-        <h2 class="mt-4">TODO KAMU</h2>
 
-        <ul id="todos" class="w-50"></ul>
-    </div>
+    <nav class="navbar navbar-expand-lg bg-todo">
+        <div class="container-fluid d-flex justify-content-center">
+            <a class="navbar-brand text-white todo-logo" href="#">Todoo</a>
+        </div>
+    </nav>
+
+    <main>
+        <div class="container">
+            <div class="row mt-3 text-center d-flex justify-content-center">
+                <div class="col-md-3 p-3 todoimg-wrapper mb-3">
+                    <img src="assets/img/todolist-main.png" alt="todolist" width="150">
+                </div>
+                <div class="col-md-7 p-3 todomain-wrapper mb-5">
+                    <div class="input-group flex-nowrap">
+                        <input type="text" class="form-control" placeholder="Add..." id="input-search">
+                        <span class="input-group-text bg-todo text-todo" id="addButton">+</span>
+                    </div>
+
+                    <ul class="list-group text-start mt-3" id="todos">
+
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
